ECOM-55 amend to manufacture
