# app/Models/Accessory.php
@@ -6,7 +6,7 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use  Illuminate\Database\Eloquent\Relations\BelongsToMany;
-use App\Models\Manufactory;
+use App\Models\Manufacture;
 
 class Accessory extends Model
 {
