# app/Models/Manufacture.php
@@ -5,7 +5,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class Manufactory extends Model
+class Manufacture extends Model
 {
     use HasFactory;
     protected $guarded = false;
