# routes/api.php
@@ -6,13 +6,13 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AccessoryController;
 use App\Http\Controllers\CategoryController;
-use App\Http\Controllers\Swagger\ManufactoryController;
+use App\Http\Controllers\ManufactureController;
 
 Route::apiResource('accessories', AccessoryController::class);
 
 Route::apiResource('categories', CategoryController::class);
 
-Route::apiResource('manufactory', ManufactoryController::class);
+Route::apiResource('manufactures', ManufactureController::class);
 
 Route::apiResource('subcategory', SubcategoryController::class);
 
